docs/api/qiskit/0.19/qiskit.aqua.operators.expectations.MatrixExpectation.mdx
---
title: MatrixExpectation (v0.19)
description: API reference for qiskit.aqua.operators.expectations.MatrixExpectation in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.expectations.MatrixExpectation
---

# MatrixExpectation

<Class id="qiskit.aqua.operators.expectations.MatrixExpectation" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/operators/expectations/matrix_expectation.py" signature="MatrixExpectation" modifiers="class">
  An Expectation converter which converts Operator measurements to be matrix-based so they can be evaluated by matrix multiplication.

  ## Methods

  <span id="matrixexpectation-compute-variance" />

  ### compute\_variance

  <Function id="qiskit.aqua.operators.expectations.MatrixExpectation.compute_variance" signature="MatrixExpectation.compute_variance(exp_op)">
    Compute the variance of the expectation estimator. Because this expectation works by matrix multiplication, the estimation is exact and the variance is always 0, but we need to return those values in a way which matches the Operator’s structure.

    **Parameters**

    **exp\_op** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The full expectation value Operator.

    **Return type**

    `Union`\[`list`, `float`]

    **Returns**

    The variances or lists thereof (if exp\_op contains ListOps) of the expectation value estimation, equal to 0.
  </Function>

  <span id="matrixexpectation-convert" />

  ### convert

  <Function id="qiskit.aqua.operators.expectations.MatrixExpectation.convert" signature="MatrixExpectation.convert(operator)">
    Accept an Operator and return a new Operator with the Pauli measurements replaced by Matrix based measurements.

    **Parameters**

    **operator** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The operator to convert.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The converted operator.
  </Function>
</Class>

