docs/api/qiskit/0.24/qiskit.aqua.operators.expectations.MatrixExpectation.mdx
---
title: MatrixExpectation
description: API reference for qiskit.aqua.operators.expectations.MatrixExpectation
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.expectations.MatrixExpectation
---

<span id="qiskit-aqua-operators-expectations-matrixexpectation" />

# qiskit.aqua.operators.expectations.MatrixExpectation

<Class id="qiskit.aqua.operators.expectations.MatrixExpectation" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/operators/expectations/matrix_expectation.py" signature="MatrixExpectation">
  An Expectation converter which converts Operator measurements to be matrix-based so they can be evaluated by matrix multiplication.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.operators.expectations.MatrixExpectation.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                                               |                                                                                                                 |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.operators.expectations.MatrixExpectation.__init__ "qiskit.aqua.operators.expectations.MatrixExpectation.__init__")()                                | Initialize self.                                                                                                |
  | [`compute_variance`](#qiskit.aqua.operators.expectations.MatrixExpectation.compute_variance "qiskit.aqua.operators.expectations.MatrixExpectation.compute_variance")(exp\_op) | Compute the variance of the expectation estimator.                                                              |
  | [`convert`](#qiskit.aqua.operators.expectations.MatrixExpectation.convert "qiskit.aqua.operators.expectations.MatrixExpectation.convert")(operator)                           | Accept an Operator and return a new Operator with the Pauli measurements replaced by Matrix based measurements. |

  ### compute\_variance

  <Function id="qiskit.aqua.operators.expectations.MatrixExpectation.compute_variance" name="compute_variance" signature="compute_variance(exp_op)">
    Compute the variance of the expectation estimator. Because this expectation works by matrix multiplication, the estimation is exact and the variance is always 0, but we need to return those values in a way which matches the Operator’s structure.

    **Parameters**

    **exp\_op** (`OperatorBase`) – The full expectation value Operator.

    **Return type**

    `Union`\[`list`, `float`]

    **Returns**

    The variances or lists thereof (if exp\_op contains ListOps) of the expectation value estimation, equal to 0.
  </Function>

  ### convert

  <Function id="qiskit.aqua.operators.expectations.MatrixExpectation.convert" name="convert" signature="convert(operator)">
    Accept an Operator and return a new Operator with the Pauli measurements replaced by Matrix based measurements.

    **Parameters**

    **operator** (`OperatorBase`) – The operator to convert.

    **Return type**

    `OperatorBase`

    **Returns**

    The converted operator.
  </Function>
</Class>

